4.Cloudinary and Merchant manage Product and add Product

--- a/src/main/resources/templates/merchant-home.html
+++ b/src/main/resources/templates/merchant-home.html
@@ -13,8 +13,8 @@
       </div>
     <h1>Merchant Home</h1>
     <a href=""><button>Manage Profile</button></a>
-    <a href=""><button>Add Product</button></a>
-    <a href=""><button>Manage Products</button></a>
+    <a href="/merchant/add-product"><button>Add Product</button></a>
     <a href="/logout"><button>Logout</button></a>
+     <a href="/merchant/manage-products"><button>Manage Products</button></a>
 </body>
 </html>
