--- a/src/main/resources/templates/manage-products.html
+++ b/src/main/resources/templates/manage-products.html
@@ -6,6 +6,11 @@
      <title>Document</title>
    </head>
    <body>
+      <div class="message">
+      <h2 style="color: green" th:text="${session.pass}"></h2>
+      <h2 style="color: red" th:text="${session.fail}"></h2>
+      <th:block th:text="${@messageRemover.remove()}"></th:block>
+    </div>
      <div align="center">
        <h1>Products</h1>
        <table border="1">
@@ -28,10 +33,13 @@
            <td th:text="${product.price}+'&#8377'"></td>
            <td th:text="${product.stock}"></td>
            <td th:text="${product.category}"></td>
-           <td th:text="${product.status}"></td>
+            <td>
+            <span th:if="${product.status.name().equals('REJECTED')}" th:text="${product.status}+'->'+${product.reason}"></span>
+            <span th:if="${!product.status.name().equals('REJECTED')}" th:text="${product.status}" ></span>
+          </td>
            <td>
-             <button>Edit</button>
-             <button>Delete</button>
+      <a th:href="'/merchant/edit/'+${product.id}"><button>Edit</button></a>
+            <a th:href="'/merchant/delete/'+${product.id}"><button>Delete</button></a>
            </td>
          </tr>
        </table>
